--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "integration-tests": "NODE_ENV=test nyc mocha '**/*.spec.js' --exit"
   },
   "dependencies": {
+    "aws-sdk": "^2.640.0",
     "body-parser": "^1.18.3",
     "cheerio": "latest",
     "cookie-parser": "~1.4.3",
@@ -20,6 +21,7 @@
     "keycloak-connect": "6.0.1",
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "request": "latest",
     "rotating-file-stream": "^1.3.2",
     "serve-favicon": "^2.5.0",
