--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "request": "latest",
     "rotating-file-stream": "^1.3.2",
     "serve-favicon": "^2.5.0",
@@ -36,8 +37,8 @@
     "eslint": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.7",
-    "nyc": "^14.1.1",
+    "nodemon": "^2.0.2",
+    "nyc": "^15.0.0",
     "supertest": "^3.4.1"
   }
 }
